--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -17,18 +17,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK 21
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: "21"
+          java-version: "17"
           distribution: "temurin"
 
       - uses: gradle/actions/setup-gradle@v3
         with:
-          gradle-version: 8.9
+          gradle-version: 8.7
 
       - name: Run Gradle Command
-        run: ./gradlew clean build --no-daemon
+        run: gradle clean build --no-daemon
         env:
           DOCKER_ENABLE_SECURITY: false
 
