--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "java"
-    id "org.springframework.boot" version "3.3.0"
-    id "io.spring.dependency-management" version "1.1.5"
+    id "org.springframework.boot" version "3.3.2"
+    id "io.spring.dependency-management" version "1.1.6"
     id "org.springdoc.openapi-gradle-plugin" version "1.8.0"
     id "io.swagger.swaggerhub" version "1.3.2"
     id "edu.sc.seis.launch4j" version "3.0.5"
@@ -18,8 +18,10 @@ ext {
 group = "stirling.software"
 version = "0.26.2"
 
-// 17 is lowest but we support and recommend 21
-sourceCompatibility = "17"
+java {
+    // 17 is lowest but we support and recommend 21
+    sourceCompatibility = JavaVersion.VERSION_17
+}
 
 repositories {
     mavenCentral()
@@ -197,7 +199,7 @@ compileJava {
     options.compilerArgs << "-parameters"
 }
 
-task writeVersion  {
+task writeVersion {
     def propsFile = file("src/main/resources/version.properties")
     def props = new Properties()
     props.setProperty("version", version)
@@ -227,6 +229,6 @@ tasks.named("test") {
     useJUnitPlatform()
 }
 
-task printVersion  {
+task printVersion {
     println project.version
 }
