--- a/.github/workflows/push-docker-new.yml
+++ b/.github/workflows/push-docker-new.yml
@@ -2,10 +2,10 @@ name: Push Docker Image with VersionNumber New
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - master
-      - main
+#   push:
+#     branches:
+#       - master
+#       - main
 
 permissions:
   contents: read
