--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install Docker Compose
         run: |
           sudo curl -SL "https://github.com/docker/compose/releases/download/v2.29.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          # sudo chmod +x /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -44,5 +44,5 @@ jobs:
 
       - name: Run Docker Compose Tests
         run: |
-          chmod +x ./test.sh
+          sudo chmod +x ./test.sh
           ./test.sh
