--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,8 +35,8 @@ jobs:
 
       - name: Set up Python
         uses: actions/setup-python@v4
-        # with:
-          # python-version: "3.7"
+        with:
+          python-version: "3.7"
 
       - name: Pip requirements
         run: |
