--- a/exampleYmlFiles/docker-compose-latest-Self-Build.yml
+++ b/exampleYmlFiles/docker-compose-latest-Self-Build.yml
@@ -24,9 +24,9 @@ services:
       LANGS: "en_GB,en_US,ar_AR,de_DE,fr_FR,es_ES,zh_CN,zh_TW,ca_CA,it_IT,sv_SE,pl_PL,ro_RO,ko_KR,pt_BR,ru_RU,el_GR,hi_IN,hu_HU,tr_TR,id_ID"
       INSTALL_BOOK_AND_ADVANCED_HTML_OPS: "true"
       SYSTEM_DEFAULTLOCALE: en-US
-      UI_APPNAME: Stirling-PDF
-      UI_HOMEDESCRIPTION: Demo site for Stirling-PDF Latest-Self-Build
-      UI_APPNAMENAVBAR: Stirling-PDF Latest-Self-Build
+      UI_APPNAME: Stirling-PDF-Self-Build
+      UI_HOMEDESCRIPTION: Demo site for Stirling-PDF-Self-Build
+      UI_APPNAMENAVBAR: Stirling-PDF-Self-Build
       SYSTEM_MAXFILESIZE: "100"
       METRICS_ENABLED: "true"
       SYSTEM_GOOGLEVISIBILITY: "true"
