--- a/exampleYmlFiles/docker-compose-latest-lite-security-Self-Build.yml
+++ b/exampleYmlFiles/docker-compose-latest-lite-security-Self-Build.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
   stirling-pdf:
-    container_name: Stirling-PDF-Lite-Security-Self-Build
+    container_name: Stirling-PDF-Ultra-Lite-Security-Self-Build
     image: ludy87/s-pdf:latest-lite-Self-Build
     deploy:
       resources:
@@ -22,9 +22,9 @@ services:
       DOCKER_ENABLE_SECURITY: "true"
       SECURITY_ENABLELOGIN: "true"
       SYSTEM_DEFAULTLOCALE: en-US
-      UI_APPNAME: Stirling-PDF-Lite
-      UI_HOMEDESCRIPTION: Demo site for Stirling-PDF-Lite Latest-Self-Build with Security
-      UI_APPNAMENAVBAR: Stirling-PDF-Lite Latest-Self-Build
+      UI_APPNAME: Stirling-PDF-Ultra-Lite-Security-Self-Build
+      UI_HOMEDESCRIPTION: Demo site for Stirling-PDF-Ultra-Lite-Security-Self-Build Latest-Self-Build with Security
+      UI_APPNAMENAVBAR: Stirling-PDF-Ultra-Lite-Security-Self-Build
       SYSTEM_MAXFILESIZE: "100"
       METRICS_ENABLED: "true"
       SYSTEM_GOOGLEVISIBILITY: "true"
