--- a/exampleYmlFiles/docker-compose-latest-ultra-lite-security-Self-Build.yml
+++ b/exampleYmlFiles/docker-compose-latest-ultra-lite-security-Self-Build.yml
@@ -22,9 +22,9 @@ services:
       DOCKER_ENABLE_SECURITY: "true"
       SECURITY_ENABLELOGIN: "true"
       SYSTEM_DEFAULTLOCALE: en-US
-      UI_APPNAME: Stirling-PDF-Lite
-      UI_HOMEDESCRIPTION: Demo site for Stirling-PDF-Lite Latest-Self-Build with Security
-      UI_APPNAMENAVBAR: Stirling-PDF-Lite Latest-Self-Build
+      UI_APPNAME: Stirling-PDF-Ultra-Lite-Security-Self-Build
+      UI_HOMEDESCRIPTION: Demo site for Stirling-PDF-Ultra-Lite-Security-Self-Build with Security
+      UI_APPNAMENAVBAR: Stirling-PDF-Ultra-Lite-Security-Self-Build
       SYSTEM_MAXFILESIZE: "100"
       METRICS_ENABLED: "true"
       SYSTEM_GOOGLEVISIBILITY: "true"
