--- a/Dockerfile-Self-Build
+++ b/Dockerfile-Self-Build
@@ -87,8 +87,9 @@ RUN mv /usr/share/tessdata /usr/share/tessdata-original && \
 # Set the PATH to include the virtual environment
 ENV PATH="/opt/venv/bin:$PATH"
 
+# Expose the application port
 EXPOSE 8080/tcp
 
-# Set user and run command
+# Set the entrypoint and command
 ENTRYPOINT ["tini", "--", "/scripts/init.sh"]
 CMD ["java", "-Dfile.encoding=UTF-8", "-jar", "/app.jar"]
