--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -58,17 +58,17 @@ jobs:
         id: repoowner
         run: echo "lowercase=$(echo ${{ github.repository_owner }} | awk '{print tolower($0)}')" >> $GITHUB_OUTPUT
 
-      - name: Generate tags
+      - name: Generate tags PyMuPDF
         id: metamu
         uses: docker/metadata-action@v5
         with:
           images: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/s-pdf
-            ghcr.io/${{ steps.repoowner.outputs.lowercase }}/s-pdf
+            ${{ secrets.DOCKER_HUB_USERNAME }}/pymupdf
+            ghcr.io/${{ steps.repoowner.outputs.lowercase }}/pymupdf
           tags: |
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
 
-      - name: Build PyMuPDF
+      - name: Build PyMuPDF and push main Dockerfile
         uses: docker/build-push-action@v5
         with:
           builder: ${{ steps.buildx.outputs.name }}
