--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -59,29 +59,29 @@ jobs:
         id: repoowner
         run: echo "lowercase=$(echo ${{ github.repository_owner }} | awk '{print tolower($0)}')" >> $GITHUB_OUTPUT
 
-      - name: Generate tags PyMuPDF
-        id: metamu
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/pymupdf
-            ghcr.io/${{ steps.repoowner.outputs.lowercase }}/pymupdf
-          tags: |
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
+      # - name: Generate tags PyMuPDF
+      #   id: metamu
+      #   uses: docker/metadata-action@v5
+      #   with:
+      #     images: |
+      #       ${{ secrets.DOCKER_HUB_USERNAME }}/pymupdf
+      #       ghcr.io/${{ steps.repoowner.outputs.lowercase }}/pymupdf
+      #     tags: |
+      #       type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
 
-      - name: Build PyMuPDF and push main Dockerfile
-        uses: docker/build-push-action@v5
-        with:
-          builder: ${{ steps.buildx.outputs.name }}
-          context: .
-          file: ./Dockerfile-PyMuPDF
-          push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          tags: ${{ steps.metamu.outputs.tags }}
-          labels: ${{ steps.metamu.outputs.labels }}
-          build-args: VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
-          platforms: linux/amd64,linux/arm64/v8
+      # - name: Build PyMuPDF and push main Dockerfile
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     builder: ${{ steps.buildx.outputs.name }}
+      #     context: .
+      #     file: ./Dockerfile-PyMuPDF
+      #     push: true
+      #     cache-from: type=gha
+      #     cache-to: type=gha,mode=max
+      #     tags: ${{ steps.metamu.outputs.tags }}
+      #     labels: ${{ steps.metamu.outputs.labels }}
+      #     build-args: VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
+      #     platforms: linux/amd64,linux/arm64/v8
 
       - name: Generate tags
         id: meta
