--- a/.github/workflows/pymupdf.yml
+++ b/.github/workflows/pymupdf.yml
@@ -22,12 +22,16 @@ jobs:
 
       - name: Build PyMuPDF
         run: |
+          mkdir -p /pymupdf
           pip install --break-system-packages --no-cache-dir libclang
           wget https://github.com/pymupdf/PyMuPDF/archive/refs/tags/1.24.9.tar.gz
-          tar -xvf 1.24.9.tar.gz
-          cd PyMuPDF-1.24.9
+          tar -xvf 1.24.9.tar.gz -C /pymupdf
+          cd /pymupdf/PyMuPDF-1.24.9
           PYMUPDF_SETUP_MUPDF_TESSERACT=0 python3 setup.py install
           cd .. && rm -rf PyMuPDF-1.24.9 1.24.9.tar.gz
+
+      - name: List files in /pymupdf
+        run: ls -la /pymupdf
 
       - name: Upload PyMuPDF build results
         uses: actions/upload-artifact@v3
