--- a/.github/workflows/pymupdf.yml
+++ b/.github/workflows/pymupdf.yml
@@ -1,7 +1,7 @@
 name: Build and Save PyMuPDF
 
 on:
-    workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   build:
@@ -20,21 +20,24 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential libclang-dev
 
+      - name: Create directory for artifacts
+        run: mkdir -p $HOME/pymupdf
+
       - name: Build PyMuPDF
         run: |
-          mkdir -p /pymupdf
           pip install --break-system-packages --no-cache-dir libclang
           wget https://github.com/pymupdf/PyMuPDF/archive/refs/tags/1.24.9.tar.gz
-          tar -xvf 1.24.9.tar.gz -C /pymupdf
-          cd /pymupdf/PyMuPDF-1.24.9
+          tar -xvf 1.24.9.tar.gz -C $HOME/pymupdf
+          cd $HOME/pymupdf/PyMuPDF-1.24.9
           PYMUPDF_SETUP_MUPDF_TESSERACT=0 python3 setup.py install
           cd .. && rm -rf PyMuPDF-1.24.9 1.24.9.tar.gz
 
-      - name: List files in /pymupdf
-        run: ls -la /pymupdf
+      - name: List files in $HOME/pymupdf
+        run: ls -la $HOME/pymupdf
 
       - name: Upload PyMuPDF build results
         uses: actions/upload-artifact@v4
         with:
           name: pymupdf-build
-          path: /pymupdf
+          path: $HOME/pymupdf
+          if-no-files-found: warn
