--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -35,7 +35,9 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: pymupdf-build
-          path: /tmp/pymupdf
+          # path: /tmp/pymupdf
+      - name: Display structure of downloaded files
+        run: ls -R
 
       - name: Set up Docker Buildx
         id: buildx
