--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: pymupdf-build
-          # path: /tmp/pymupdf
+          path: /opt/hostedtoolcache/Python/3.12.4/x64/lib/python3.12/site-packages/pymupdf
       - name: Display structure of downloaded files
         run: ls -R
 
