--- a/.github/workflows/pymupdf.yml
+++ b/.github/workflows/pymupdf.yml
@@ -20,12 +20,15 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential libclang-dev
 
+      - name: Install Python packages
+        run: |
+          pip install --break-system-packages --no-cache-dir setuptools wheel libclang
+
       - name: Create directory for artifacts
         run: mkdir -p $HOME/pymupdf
 
       - name: Build PyMuPDF
         run: |
-          pip install --break-system-packages --no-cache-dir libclang
           wget https://github.com/pymupdf/PyMuPDF/archive/refs/tags/1.24.9.tar.gz
           tar -xvf 1.24.9.tar.gz -C $HOME/pymupdf
           cd $HOME/pymupdf/PyMuPDF-1.24.9
