--- a/.github/workflows/pymupdf.yml
+++ b/.github/workflows/pymupdf.yml
@@ -45,6 +45,15 @@ jobs:
       #     name: pymupdf-build
       #     path: ${{ github.workspace }}/pymupdf/PyMuPDF-1.24.9/dist/*.whl
       #     if-no-files-found: warn
+      - name: Set up git config
+        run: |
+          git config --global user.email "GitHub Action <action@github.com>"
+          git config --global user.name "GitHub Action <action@github.com>"
+      - name: Run git add
+        run: |
+          git add .
+          git diff --staged --quiet || git commit -m ":floppy_disk: Sync Versions
+          > Made via sync_files.yml" || echo "no changes"
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6.0.5
         with:
