--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -31,6 +31,33 @@ jobs:
         env:
           DOCKER_ENABLE_SECURITY: false
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential libclang-dev
+
+      - name: Install Python packages
+        run: |
+          pip install --break-system-packages --no-cache-dir setuptools wheel libclang
+
+      - name: Create directory for artifacts
+        run: mkdir -p ${{ github.workspace }}/pymupdf
+
+      - name: Build PyMuPDF
+        id: pyMuPDF
+        run: |
+          wget https://github.com/pymupdf/PyMuPDF/archive/refs/tags/1.24.9.tar.gz
+          tar -xvf 1.24.9.tar.gz -C ${{ github.workspace }}/pymupdf
+          cd ${{ github.workspace }}/pymupdf/PyMuPDF-1.24.9
+          PYMUPDF_SETUP_MUPDF_TESSERACT=0 python3 setup.py insatll
+          ls -la dist  # Überprüfe, ob das Wheel im dist-Verzeichnis vorhanden ist
+          cd .. && rm -rf PyMuPDF-1.24.9 1.24.9.tar.gz
+
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v3
@@ -96,6 +123,7 @@ jobs:
             type=raw,value=alpha,enable=${{ github.ref == 'refs/heads/main' }}
 
       - name: Build and push main Dockerfile
+        id: maindockerfile
         uses: docker/build-push-action@v5
         with:
           builder: ${{ steps.buildx.outputs.name }}
@@ -108,6 +136,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             VERSION_TAG=${{ steps.versionNumber.outputs.versionNumber }}
+            PYMUDF_PATH=${{ github.workspace }}/pymupdf
           platforms: linux/amd64,linux/arm64/v8
 
       # - name: Generate tags ultra-lite
