--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -36,21 +36,21 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install Python packages
-        run: |
-          pip install --break-system-packages --no-cache-dir setuptools wheel libclang
+      # - name: Install Python packages
+      #   run: |
+      #     pip install --break-system-packages --no-cache-dir setuptools wheel libclang
 
-      - name: Create directory for artifacts
-        run: mkdir -p ${{ github.workspace }}/pymupdf
+      # - name: Create directory for artifacts
+      #   run: mkdir -p ${{ github.workspace }}/pymupdf
 
-      - name: Build PyMuPDF
-        id: pyMuPDF
-        run: |
-          wget https://github.com/pymupdf/PyMuPDF/archive/refs/tags/1.24.9.tar.gz
-          tar -xvf 1.24.9.tar.gz -C ${{ github.workspace }}/pymupdf
-          cd ${{ github.workspace }}/pymupdf/PyMuPDF-1.24.9
-          PYMUPDF_SETUP_MUPDF_TESSERACT=0 python3 setup.py install
-          cd .. && rm -rf PyMuPDF-1.24.9 1.24.9.tar.gz
+      # - name: Build PyMuPDF
+      #   id: pyMuPDF
+      #   run: |
+      #     wget https://github.com/pymupdf/PyMuPDF/archive/refs/tags/1.24.9.tar.gz
+      #     tar -xvf 1.24.9.tar.gz -C ${{ github.workspace }}/pymupdf
+      #     cd ${{ github.workspace }}/pymupdf/PyMuPDF-1.24.9
+      #     PYMUPDF_SETUP_MUPDF_TESSERACT=0 python3 setup.py install
+      #     cd .. && rm -rf PyMuPDF-1.24.9 1.24.9.tar.gz
 
       - name: Set up Docker Buildx
         id: buildx
