--- a/.github/workflows/pymupdf.yml
+++ b/.github/workflows/pymupdf.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install Python packages
         run: |
-          pip install --break-system-packages --no-cache-dir setuptools wheel libclang
+          pip install --break-system-packages libclang git
 
       - name: Create directory for artifacts
         run: mkdir -p ${{ github.workspace }}/pymupdf
@@ -32,7 +32,7 @@ jobs:
           wget https://github.com/pymupdf/PyMuPDF/archive/refs/tags/1.24.9.tar.gz
           tar -xvf 1.24.9.tar.gz -C ${{ github.workspace }}/pymupdf
           cd ${{ github.workspace }}/pymupdf/PyMuPDF-1.24.9
-          PYMUPDF_SETUP_MUPDF_TESSERACT=0 python3 setup.py bdist_wheel
+          PYMUPDF_SETUP_MUPDF_TESSERACT=0 PYMUPDF_SETUP_MUPDF_TGZ="git:--branch master https://github.com/ArtifexSoftware/mupdf.git" python3 setup.py bdist_wheel
           ls -la dist  # Überprüfe, ob das Wheel im dist-Verzeichnis vorhanden ist
           cd .. && rm -rf PyMuPDF-1.24.9 1.24.9.tar.gz
 
